ทำหน้า ดาวน์โหลดเอกสาร

--- a/download-ffc.html
+++ b/download-ffc.html
@@ -36,65 +36,49 @@ th {
   <tr>
     <td>1</td>
     <td>
-
-      คู่มือการใช้งาน</td>
+          <a href="download/FFC Autosync Plus.pdf">FFC Autosync Plus</a>
+          <img src="img/pdf.png" alt="FFC.com">
+    </td>
     <td>3</td>
   </tr>
   <tr>
     <td>2</td>
     <td>
-      การใช้งาน</td>
+      <a href="download/คู่มือการติดตั้ง FFC Autosync plus">คู่มือการติดตั้ง FFC Autosync plus</a>
+      <img src="img/pdf.png" alt="FFC.com">
+    </td>
     <td>5</td>
   </tr>
   <tr>
     <td>3</td>
     <td>
-      ประชาชาติธุรกิจ FFC Plus</td>
+      <a href="download/FFC+ Whats new">FFC+ Whats new</a>
+      <img src="img/pdf.png" alt="FFC.com">
+      </td>
     <td>9</td>
   </tr>
   <tr>
     <td>4</td>
-    <td>การใช้งาน</td>
+    <td>
+      <a href="download/Inspire FFC Plus 2.0">Inspire FFC Plus 2.0</a>
+      <img src="img/pdf.png" alt="FFC.com">
+    </td>
 
     <td>9</td>
   </tr>
   <tr>
     <td>5</td>
-    <td>คู่มือ</td>
-    <td>9</td>
-  </tr>
-  <tr>
-    <td>6</td>
-    <td>คู่มือ</td>
-    <td>9</td>
-  </tr>
-  <tr>
-    <td>7</td>
-    <td>คู่มือ</td>
+    <td>
+      <a href="download/FFC_for_Visitor55 [TH]">FFC_for_Visitor55 [TH]</a>
+    <img src="img/pdf.png" alt="FFC.com"></td>
     <td>9</td>
   </tr>
 
-  <tr>
-    <td>8</td>
-    <td>คู่มือ</td>
-    <td>9</td>
-  </tr>
-  <tr>
-    <td>9</td>
-    <td>คู่มือ</td>
-    <td>9</td>
-  </tr>
-  <tr>
-    <td>10</td>
-    <td>คู่มือ</td>
-    <td>9</td>
-  </tr>
-  <tr>
-    <td>11</td>
-    <td>คู่มือ</td>
-    <td>9</td>
-  </tr>
-</table>
+
+    </table>
+    <div class="center">
+      <img src="img/FFCPlus_manual_cover.jpg" alt="FFC.com">
+
 </center>
 </div>
 </div>
