--- a/index.html
+++ b/index.html
@@ -211,11 +211,12 @@ layout: default-ffc
             </div>
             <div class="col-md-6 col-sm-3">
                 <h4>ที่อยู่</h4>
+                <p>หน่วยวิจัยโพรโตคอลและเครือข่ายไร้สาย</p>
                 <p> ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ</p>
                 <p>National Electronics and Computer Technology Center : NECTEC </p>
                 <p> 112 ถนนพหลโยธิน ตำบลคลองหนึ่ง</p>
                 <p>อำเภอคลองหลวง จังหวัดปทุมธานี 12120 </p>
-                <p>โทรศัพท์ 02-564-6900
+                <p>โทรศัพท์ 02-564-6900 ต่อ 2513, 2529
                 </p>
 
             </div>
