--- a/download-ffc.html
+++ b/download-ffc.html
@@ -36,32 +36,32 @@ th {
   <tr>
     <td>1</td>
     <td>
-          <a href="download/FFC Autosync Plus.pdf">FFC Autosync Plus</a>
-          <img src="img/pdf.png" alt="FFC.com">
+          <a href="/download/FFC Autosync Plus.pdf">FFC Autosync Plus</a>
+          <img src="/img/pdf.png" alt="FFC.com">
     </td>
     <td>3</td>
   </tr>
   <tr>
     <td>2</td>
     <td>
-      <a href="download/คู่มือการติดตั้ง FFC Autosync plus">คู่มือการติดตั้ง FFC Autosync plus</a>
-      <img src="img/pdf.png" alt="FFC.com">
+      <a href="/download/คู่มือการติดตั้ง FFC Autosync plus.pdf">คู่มือการติดตั้ง FFC Autosync plus</a>
+      <img src="/img/pdf.png" alt="FFC.com">
     </td>
     <td>5</td>
   </tr>
   <tr>
     <td>3</td>
     <td>
-      <a href="download/FFC+ Whats new">FFC+ Whats new</a>
-      <img src="img/pdf.png" alt="FFC.com">
+      <a href="/download/FFC+ Whats new.pdf">FFC+ Whats new</a>
+      <img src="/img/pdf.png" alt="FFC.com">
       </td>
     <td>9</td>
   </tr>
   <tr>
     <td>4</td>
     <td>
-      <a href="download/Inspire FFC Plus 2.0">Inspire FFC Plus 2.0</a>
-      <img src="img/pdf.png" alt="FFC.com">
+      <a href="/download/Inspire FFC Plus 2.0.pdf">Inspire FFC Plus 2.0</a>
+      <img src="/img/pdf.png" alt="FFC.com">
     </td>
 
     <td>9</td>
@@ -69,8 +69,8 @@ th {
   <tr>
     <td>5</td>
     <td>
-      <a href="download/FFC_for_Visitor55 [TH]">FFC_for_Visitor55 [TH]</a>
-    <img src="img/pdf.png" alt="FFC.com"></td>
+      <a href="/download/FFC_for_Visitor55 [TH].pdf">FFC_for_Visitor55 [TH]</a>
+    <img src="/img/pdf.png" alt="FFC.com"></td>
     <td>9</td>
   </tr>
 
@@ -78,7 +78,7 @@ th {
     </table>
     <div class="center">
       <img src="img/FFCPlus_manual_cover.jpg" alt="FFC.com">
-
+</div>
 </center>
 </div>
 </div>
