--- a/download-ffc.html
+++ b/download-ffc.html
@@ -4,6 +4,7 @@ layout: default-ffc
 <div class="container">
 <div class="col-md-12">
     <div class="center">
+      <div class="file">
 <h1>เอกสารดาวน์โหลด</h1>
 
 <style>
@@ -25,6 +26,7 @@ th {
     color: white;
 }
 </style>
+
 <center>
 <table style="width:50%">
 
@@ -76,10 +78,9 @@ th {
 
 
     </table>
-    <div class="center">
-      <img src="img/FFCPlus_manual_cover.jpg" alt="FFC.com">
-</div>
+
 </center>
+</div>
 </div>
 </div>
 </div>
