--- a/index.html
+++ b/index.html
@@ -3,14 +3,43 @@ layout: default-ffc
 ---
 <div class="contact">
     <div class="row">
-        <div class="col-md-12">
+
             <div class="intro-header">
                 <div class="container">
-                    <div class="centers">
+                  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+                  <!-- Wrapper for slides -->
+   <div class="carousel-inner" role="listbox">
+     <div class="item active">
+       <img src="/img/g2.png" alt="ffc.com" width="1200" height="500">
+       <div class="carousel-caption">
+         <p>FFC บริการถึงหน้าบ้าน...ใส่ใจสุขภาพในชุมชน</p>
+       </div>
+     </div>
 
-                        <p class="sansserif">FFC  บริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</p>
+     <div class="item">
+       <img src="/img/hbg.jpg" alt="ffc.com" width="1200" height="500">
+       <div class="carousel-caption">
+            <p>FFC บริการถึงหน้าบ้าน...ใส่ใจสุขภาพในชุมชน</p>
+       </div>
+     </div>
 
-                    </div>
+
+     <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
                     <!-- /.container -->
 
@@ -31,7 +60,7 @@ layout: default-ffc
     </div>
 </center>
 
-<div class="content-section-a trb-survey-bg">
+<div div id="What" class="content-section-a trb-survey-bg">
     <div class="container">
         <h2>Family Folder Collector </h2>
         <div class="row">
@@ -56,7 +85,7 @@ layout: default-ffc
     </div>
     <!-- /.container -->
 </div>
-<div class="content-section-a trb-report-bg">
+<div id="Who" class="content-section-a trb-report-bg">
     <div class="container">
         <div class="row">
             <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
@@ -75,7 +104,7 @@ layout: default-ffc
     </div>
 </div>
 
-<div class="content-section-b trb-showe-bg">
+<div id="tour"class="content-section-b trb-showe-bg">
     <div class="content-section-b">
         <div class="container">
             <div class="center">
@@ -152,11 +181,11 @@ layout: default-ffc
     </div>
 </div>
 <!-- /.container -->
-<div class="content-section-a trb-report-bg">
+<div  class="content-section-a trb-report-bg">
     <div class="container">
-
+      <center>
+          <h2>ข่าวสารและกิจกรรม</h2></center>
           <div class="row">
-
               {% for post in site.posts limit:3 %}
               <div class="col-md-4 news-padding">
 
@@ -195,7 +224,7 @@ layout: default-ffc
     </div>
 </div>
 
-<div class="content-section-a trb-report-bg">
+<div id="contact" class="content-section-a trb-report-bg">
     <div class="container">
         <div class="row">
             <center>
