ปรับขนาดของรูปใน slide ให้เท่ากันทั้งหมด

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@ layout: default-ffc
                   <!-- Wrapper for slides -->
    <div class="carousel-inner" role="listbox">
      <div class="item active">
-       <img src="/img/g2.png" alt="ffc.com" width="1200" height="500">
+       <img src="/img/ffcc.jpg" alt="ffc.com" width="1200" height="500">
        <div class="carousel-caption">
-         <p>FFC บริการถึงหน้าบ้าน...ใส่ใจสุขภาพในชุมชน</p>
+         <h3>FFC บริการถึงหน้าบ้าน...ใส่ใจสุขภาพในชุมชน</h3>
        </div>
      </div>
 
      <div class="item">
-       <img src="/img/hbg.jpg" alt="ffc.com" width="1200" height="500">
+       <img src="/img/ffcc1.jpg" alt="ffc.com" width="1200" height="500">
        <div class="carousel-caption">
-            <p>FFC บริการถึงหน้าบ้าน...ใส่ใจสุขภาพในชุมชน</p>
+            <h3>FFC บริการถึงหน้าบ้าน...ใส่ใจสุขภาพในชุมชน</h3>
        </div>
      </div>
 
