--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@ layout: default-ffc
     <div class="container">
         <h2>Family Folder Collector </h2>
         <div class="row">
+          <div class="center">
             <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
-                <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
-                <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
+                <img class="img-responsive " src="/img/ffc112.png" alt="FFC.com" width="325" height="310">
             </div>
+          </div>
             <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                <h2 class="section-heading heading-pink">คืออะไร? </h2>
+                <h2 class="section-heading heading-pink">คืออะไร ? </h2>
                 <p style="color:#000000;">
                     โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
                     สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
@@ -93,10 +94,10 @@ layout: default-ffc
             </div>
 
             <div class="col-sm-6 wow fadeInRightBig animated animated" data-animation-delay="200" style="visibility: visible; animation-name: fadeInRightBig;">
-                <h2 class="section-heading heading-green">ใครใช้?</h2>
+                <h2 class="section-heading heading-green">ใครใช้ ?</h2>
 
                 <p>
-                    ผู้ใช้แอพ FFC Plus นี้ สำหรับเจ้าหน้าที่ทางด้านสาธารณะสุขที่ทำงานอยู่ตามสถานีอนามัย โรงพยาบาลส่งเสริมสุขภาพตำบล (รพ.สต.)ที่ใช้งานโปรแกรม JHCIS อยู่เท่านั้น
+                    ผู้ใช้แอพ FFC Plus นี้ สำหรับเจ้าหน้าที่ทางด้านสาธารณสุขที่ทำงานอยู่ตามสถานีอนามัย โรงพยาบาลส่งเสริมสุขภาพตำบล (รพ.สต.)ที่ใช้งานโปรแกรม JHCIS อยู่เท่านั้น
                 </p>
 
             </div>
