เพิ่มไฟล์ดาวน์โหลด

--- a/download-ffc.html
+++ b/download-ffc.html
@@ -73,9 +73,14 @@ th {
     <td>
       <a href="/download/FFC_for_Visitor55 [TH].pdf">FFC_for_Visitor55 [TH]</a>
     <img src="/img/pdf.png" alt="FFC.com"></td>
-    
-  </tr>
 
+  </tr>
+  <td>6</td>
+  <td>
+    <a href="/download/FFC Autosync Plus Setup.zip" target="_blank">FFC Autosync Plus Setup</a>
+  <img src="/img/pdf.png" alt="FFC.com"></td>
+
+  </tr>
 
     </table>
 
