เพิ่ม google from

--- a/download-ffc.html
+++ b/download-ffc.html
@@ -33,53 +33,33 @@ th {
   <tr>
     <th>ลำดับที่</th>
     <th>ชื่อเรื่อง</th>
+   <th>ชนิดไฟล์</th>
    
   </tr>
-  <tr>
-    <td>1</td>
-    <td>
-          <a href="/download/FFC Autosync Plus.pdf">FFC Autosync Plus</a>
-          <img src="/img/pdf.png" alt="FFC.com">
-    </td>
+<tr>
+<td>1</td>
+<td>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLScL3kGiEp0gmKQfFkcutRlhVKt3HV7ENZySspXS44AWoWwCCQ/viewform">แบบฟอร์มการลงทะเบียนการใช้งานโปรแกรม FFC</a></td>
+  <td>
+<i class="fa fa-file-text" style="font-size:24px;color:red"></i></td>
 
-  </tr>
+</tr>
   <tr>
     <td>2</td>
     <td>
-      <a href="/download/คู่มือการติดตั้ง FFC Autosync plus.pdf">คู่มือการติดตั้ง FFC Autosync plus</a>
-      <img src="/img/pdf.png" alt="FFC.com">
+          <a href="/download/FFC Autosync Plus.pdf">FFC Autosync Plus</a></td>
+          <td>
+          <img src="/img/pdf.png" alt="FFC.com">
     </td>
 
   </tr>
   <tr>
     <td>3</td>
     <td>
-      <a href="/download/FFC+ Whats new.pdf">FFC+ Whats new</a>
-      <img src="/img/pdf.png" alt="FFC.com">
-      </td>
-
-  </tr>
-  <tr>
-    <td>4</td>
-    <td>
-      <a href="/download/Inspire FFC Plus 2.0.pdf">Inspire FFC Plus 2.0</a>
+      <a href="/download/คู่มือการติดตั้ง FFC Autosync plus.pdf">คู่มือการติดตั้ง FFC Autosync plus</a></td>
+      <td>
       <img src="/img/pdf.png" alt="FFC.com">
     </td>
-
-
-  </tr>
-  <tr>
-    <td>5</td>
-    <td>
-      <a href="/download/FFC_for_Visitor55 [TH].pdf">FFC_for_Visitor55 [TH]</a>
-    <img src="/img/pdf.png" alt="FFC.com"></td>
-
-  </tr>
-  <tr>
-  <td>6</td>
-  <td>
-    <a href="/download/FFC Autosync Plus Setup.zip" target="_blank">FFC Autosync Plus Setup</a>
-  <img src="/img/pdf.png" alt="FFC.com"></td>
 
   </tr>
 
