--- a/index.html
+++ b/index.html
@@ -4,42 +4,42 @@ layout: default-ffc
 <div class="contact">
     <div class="row">
 
-            <div class="intro-header">
-                <div class="container">
-                  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
-                  <!-- Wrapper for slides -->
-   <div class="carousel-inner" role="listbox">
-     <div class="item active">
-       <img src="/img/ffcc.jpg" alt="ffc.com" width="1200" height="500">
-       <div class="carousel-caption">
-         <h3>FFC บริการถึงหน้าบ้าน...ใส่ใจสุขภาพในชุมชน</h3>
-       </div>
-     </div>
+        <div class="intro-header">
+            <div class="container">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="/img/ffcc.jpg" alt="ffc.com" width="1200" height="500">
+                            <div class="carousel-caption">
+                                <h3>FFC บริการถึงหน้าบ้าน...ใส่ใจสุขภาพในชุมชน</h3>
+                            </div>
+                        </div>
 
-     <div class="item">
-       <img src="/img/ffcc1.jpg" alt="ffc.com" width="1200" height="500">
-       <div class="carousel-caption">
-            <h3>FFC บริการถึงหน้าบ้าน...ใส่ใจสุขภาพในชุมชน</h3>
-       </div>
-     </div>
+                        <div class="item">
+                            <img src="/img/ffcc1.jpg" alt="ffc.com" width="1200" height="500">
+                            <div class="carousel-caption">
+                                <h3>FFC บริการถึงหน้าบ้าน...ใส่ใจสุขภาพในชุมชน</h3>
+                            </div>
+                        </div>
 
 
-     <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+                        <!-- Controls -->
+                        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
 
                     <!-- /.container -->
 
@@ -56,22 +56,28 @@ layout: default-ffc
                 <h2>Family Folder Collector </h2>
                 <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา</h4>
             </div>
-        </div>
-    </div>
+
+                    </div>
+                </div>
+            </div>
+
+
 </center>
 
 <div div id="What" class="content-section-a trb-survey-bg">
     <div class="container">
         <h2>Family Folder Collector </h2>
+
+
         <div class="row">
 
             <div class="col-sm-5 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
 
                 <img class="img-responsive " src="/img/ffc112.png" alt="FFC.com" width="325" height="310">
             </div>
-          
+
             <div class="col-sm-7 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                <h2 class="section-heading heading-pink">คืออะไร ? </h2>
+                <h2 class="section-heading heading-pink">What ? </h2>
                 <p style="color:#000000;">
                     โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
                     สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
@@ -95,7 +101,7 @@ layout: default-ffc
             </div>
 
             <div class="col-sm-6 wow fadeInRightBig animated animated" data-animation-delay="200" style="visibility: visible; animation-name: fadeInRightBig;">
-                <h2 class="section-heading heading-green">ใครใช้ ?</h2>
+                <h2 class="section-heading heading-green">Who?</h2>
 
                 <p>
                     ผู้ใช้แอพ FFC Plus นี้ สำหรับเจ้าหน้าที่ทางด้านสาธารณสุขที่ทำงานอยู่ตามสถานีอนามัย โรงพยาบาลส่งเสริมสุขภาพตำบล (รพ.สต.)ที่ใช้งานโปรแกรม JHCIS อยู่เท่านั้น
@@ -106,12 +112,13 @@ layout: default-ffc
     </div>
 </div>
 
-<div id="tour"class="content-section-b trb-showe-bg">
+<div id="tour" class="content-section-b trb-showe-bg">
     <div class="content-section-b">
         <div class="container">
             <div class="center">
                 <div class="row">
-                    <h2>คุณสมบัติ</h2>
+                    <h2>property</h2>
+                    <h4>คุณสมบัติ</h4>
                     <section class="all-features featured text-left">
                         <div class="col-sm-4">
                             <div class="grid grid-3 vertical-gutters-large gallery">
@@ -183,35 +190,35 @@ layout: default-ffc
     </div>
 </div>
 <!-- /.container -->
-<div  class="content-section-a trb-report-bg">
+<div class="content-section-a trb-report-bg">
     <div class="container">
-      <center>
-          <h2>ข่าวสารและกิจกรรม</h2></center>
-          <div class="row">
-              {% for post in site.posts limit:3 %}
-              <div class="col-md-4 news-padding">
+        <center>
+            <h2>ข่าวสารและกิจกรรม</h2></center>
+        <div class="row">
+            {% for post in site.posts limit:3 %}
+            <div class="col-md-4 news-padding">
 
-                      <div class="news-bg">
-                        <a href="{{ post.url }}.html">
-                          <img class="news-img" src="img/news/{{ post.image }}" alt="FFC.com">
-                              <div class="news1-content news1-padding">
-                              <h4>{{ post.title }}</h4>
-                            </div>
-                            </a>
-                              <div class="news-content news-padding">
+                <div class="news-bg">
+                    <a href="{{ post.url }}.html">
+                        <img class="news-img" src="img/news/{{ post.image }}" alt="FFC.com">
+                        <div class="news1-content news1-padding">
+                            <h4>{{ post.title }}</h4>
+                        </div>
+                    </a>
+                    <div class="news-content news-padding">
 
-                            <p>{{ post.description }}</p>
-                          </div>
-                      </div>
+                        <p>{{ post.description }}</p>
+                    </div>
+                </div>
 
-              </div>
-              {% endfor %}
-          </div>
-<div class="news-center">
- <a href="https://suppaluck.github.io/news">
-      <button style="font-size:24px">ข่าวเพิ่มเติม <i class="fa fa-hand-o-right"></i></button></a>
+            </div>
+            {% endfor %}
+        </div>
+        <div class="news-center">
+            <a href="https://suppaluck.github.io/news">
+                <button style="font-size:24px">ข่าวเพิ่มเติม <i class="fa fa-hand-o-right"></i></button></a>
+        </div>
     </div>
-  </div>
 </div>
 <div class="content-section-b trb-video-bg">
     <div class="center">
