--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ layout: default-ffc
             </div>
 
             <div class="col-sm-7 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                <h2 class="section-heading heading-pink">What ? </h2>
+                <h2 class="section-heading heading-pink">About ? </h2>
                 <p style="color:#000000;">
                     โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
                     สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
@@ -99,9 +99,8 @@ layout: default-ffc
             <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
                 <img class="img-responsive " src="img/all1.png" alt="FFC.com" width="550" height="530">
             </div>
-
             <div class="col-sm-6 wow fadeInRightBig animated animated" data-animation-delay="200" style="visibility: visible; animation-name: fadeInRightBig;">
-                <h2 class="section-heading heading-green">Who?</h2>
+                <h2 class="section-heading heading-green">User?</h2>
 
                 <p>
                     ผู้ใช้แอพ FFC Plus นี้ สำหรับเจ้าหน้าที่ทางด้านสาธารณสุขที่ทำงานอยู่ตามสถานีอนามัย โรงพยาบาลส่งเสริมสุขภาพตำบล (รพ.สต.)ที่ใช้งานโปรแกรม JHCIS อยู่เท่านั้น
@@ -117,7 +116,7 @@ layout: default-ffc
         <div class="container">
             <div class="center">
                 <div class="row">
-                    <h2>property</h2>
+                    <h2>Features</h2>
                     <h4>คุณสมบัติ</h4>
                     <section class="all-features featured text-left">
                         <div class="col-sm-4">
