แก้ไข คุณสมบัติ

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ layout: default-ffc
 
                     </div>
                 </div>
-          
+
 
 
 </center>
@@ -118,11 +118,11 @@ layout: default-ffc
                 <div class="row">
                     <h2>Features</h2>
                     <h4>คุณสมบัติ</h4>
-                    <section class="all-features featured text-right">
+                    <section class="all-features featured text-left">
                         <div class="col-sm-4">
                             <div class="grid grid-3 vertical-gutters-large gallery">
                                 <div class="column colspan-1">
-                                    <h4><i class="fa fa-expeditedssl" style="font-size:36px;color:red;"></i> &nbsp; ด้านความปลอดภัย</h4>
+                                    <h4><i class="fa fa-expeditedssl" style="font-size:36px;S"></i> &nbsp; ด้านความปลอดภัย</h4>
 
                                     <p>มีระบบการรักษาความปลอดภัยให้ฐานข้อมูลด้วยการเข้าและถอดรหัสลับก่อนใช้งานฐานข้อมูล เพื่อความปลอดภัยสูงสุดของฐานข้อมูล</p>
                                 </div>
