--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ layout: default-ffc
             </center>
             <div class="col-md-6 col-sm-3">
                 <center>
-                    <a href="https://www.google.co.th/maps/place/%E0%B8%A8%E0%B8%B9%E0%B8%99%E0%B8%A2%E0%B9%8C%E0%B9%80%E0%B8%97%E0%B8%84%E0%B9%82%E0%B8%99%E0%B9%82%E0%B8%A5%E0%B8%A2%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B9%80%E0%B8%A5%E0%B9%87%E0%B8%81%E0%B8%97%E0%B8%A3%E0%B8%AD%E0%B8%99%E0%B8%B4%E0%B8%81%E0%B8%AA%E0%B9%8C%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%84%E0%B8%AD%E0%B8%A1%E0%B8%9E%E0%B8%B4%E0%B8%A7%E0%B9%80%E0%B8%95%E0%B8%AD%E0%B8%A3%E0%B9%8C%E0%B9%81%E0%B8%AB%E0%B9%88%E0%B8%87%E0%B8%8A%E0%B8%B2%E0%B8%95%E0%B8%B4/@14.0777859,100.5991244,17z/data=!4m5!3m4!1s0x30e27f945ff7f713:0xa05f682498545ab0!8m2!3d14.0777859!4d100.6013131">
+                    <a href="https://goo.gl/maps/1rqChZPnx9u">
                         <img class="img-responsive " src="img/map2.png" alt="FFC.com" width="250" height="200">
                     </a>
                 </center>
