--- a/download-ffc.html
+++ b/download-ffc.html
@@ -41,7 +41,7 @@ th {
 <td>
   <a href="http://ffc.890m.com/ffc1.php">แบบฟอร์มการลงทะเบียนการใช้งานโปรแกรม FFC</a></td>
   <td>
-    <a href="/download/FFC Autosync Plus setup">
+    <a href="/download/FFC Autosync Plus Setup 20130707">
 <i class="fa fa-file-text" style="font-size:24px;color:red"></i></td></a>
 
 </tr>
@@ -62,7 +62,7 @@ th {
       <img src="/img/pdf.png" alt="FFC.com">
     </td>
       </tr>
-    
+
 
     </table>
 <div class="center">
