--- a/download-ffc.html
+++ b/download-ffc.html
@@ -39,10 +39,10 @@ th {
 <tr>
 <td>1</td>
 <td>
-แบบฟอร์มการลงทะเบียนการใช้งานโปรแกรม FFC</a></td>
+  <a href="http://ffc.890m.com/ffc1.php">แบบฟอร์มการลงทะเบียนการใช้งานโปรแกรม FFC</a></td>
   <td>
-
-<i class="fa fa-file-text" style="font-size:24px;color:red"></i></td>
+    <a href="/download/FFC Autosync Plus Setup 20130707">
+<i class="fa fa-file-text" style="font-size:24px;color:red"></i></td></a>
 
 </tr>
   <tr>
