--- a/download-ffc.html
+++ b/download-ffc.html
@@ -41,8 +41,8 @@ th {
 <td>
   <a href="http://ffc.890m.com/ffc1.php">แบบฟอร์มการลงทะเบียนการใช้งานโปรแกรม FFC</a></td>
   <td>
-    <a href="/download/FFC Autosync Plus Setup">
-<i class="fa fa-file-text" style="font-size:24px;color:red"></i></td></a>
+    <a href="/download/FFC Autosync Plus">
+<i class="fa fa-file-text" style="font-size:24px;color:red"></i></a></td>
 
 </tr>
   <tr>
