--- a/download-ffc.html
+++ b/download-ffc.html
@@ -41,7 +41,7 @@ th {
 <td>
   <a href="http://ffc.890m.com/ffc1.php">แบบฟอร์มการลงทะเบียนการใช้งานโปรแกรม FFC</a></td>
   <td>
-    <a href="/download/FFC Autosync Plus">
+    <a href="/download/FFC Autosync Plus.pdf">.</a>
 <i class="fa fa-file-text" style="font-size:24px;color:red"></i></a></td>
 
 </tr>
