--- a/download-ffc.html
+++ b/download-ffc.html
@@ -42,7 +42,7 @@ th {
   <a href="http://ffc.890m.com/ffc1.php">แบบฟอร์มการลงทะเบียนการใช้งานโปรแกรม FFC</a></td>
   <td>
     <a href="/download/FFC Autosync Plus.pdf">.</a>
-<i class="fa fa-file-text" style="font-size:24px;color:red"></i></a></td>
+<i class="fa fa-file-text" style="font-size:24px;color:red"></i></td>
 
 </tr>
   <tr>
