--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ layout: default-ffc
 
                                 &nbsp;
                                 <div class="column colspan-1">
-                                    <h4><i class="fa fa-newspaper-o" style="font-size:36px"></i>&nbsp;รายละเอียดผังญาติ</h4>
+                                    <h4><i class="fa fa-newspaper-o" style="font-size:36px"></i>&nbsp;รายละเอียดผังเครือญาติ</h4>
                                     <p>สามารถแสดงรายละเอียดข้อมูลคนในผังเครือญาติ เช่น เพศ วัย อายุ และสภาพการเป็นโรคเรื้อรังได้</p>
                                 </div>
 
